# nomina_auto

./: .gitignore  CLAUDE.md
backend/: .env.example  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 7a6c2c8a2066_esquema_inicial.py  7e6140cb7851_seguridad_usuario_sesion_y_auditoria.py  c4f1a9b2d7e3_descuento_ss_y_conceptos_manuales.py
backend/src/nomina/: cli.py  puebla.py  semilla.py
backend/src/nomina/aplicacion/: errores.py
backend/src/nomina/aplicacion/casos_uso/: actualizar_parametro.py  cerrar_quincena.py  exportar_liquidacion.py  liquidar_quincena.py  registrar_turno.py
backend/src/nomina/dominio/entidades/: concepto_liquidado.py  empleado.py  parametro_legal.py  periodo_liquidacion.py  turno.py  unidad_residencial.py  usuario.py
backend/src/nomina/dominio/puertos/: parametros.py  repositorios.py
backend/src/nomina/dominio/servicios/: calculadora.py  calendario_festivos.py  clasificador_extras.py  segmentador.py
backend/src/nomina/dominio/valores/: tiempo.py  tramo.py  vigencia.py
backend/src/nomina/infraestructura/: config.py
backend/src/nomina/infraestructura/api/: app.py  rutas.py  rutas_auth.py  schemas.py  traductores.py
backend/src/nomina/infraestructura/excel/: exportador.py
backend/src/nomina/infraestructura/persistencia/: base.py  modelos.py  repositorios.py  sembrar.py  sembrar_puebla.py
backend/tests/: conftest.py  test_api.py  test_casos_uso.py  test_exportar_excel.py  test_seguridad.py
backend/tests/dominio/: test_calendario_festivos.py  test_clasificador_jornada.py  test_validaciones.py
backend/tests/dominio/golden/: test_golden_puebla.py  test_golden_quincena.py
backend/tests/dominio/propiedades/: test_propiedades_motor.py
frontend/: .npmrc  (+4 more)
(+15 files in other folders)
