[project]
name = "nomina"
version = "0.1.0"
description = "Liquidación de nómina para unidades residenciales en Colombia (recargos, extras, dominicales y festivos)"
requires-python = ">=3.12"
dependencies = [
    # Fase 2 en adelante (declaradas desde ya; el dominio NO las importa)
    "fastapi>=0.115",
    "sqlalchemy>=2.0",
    "alembic>=1.13",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "openpyxl>=3.1",
    "uvicorn>=0.30",
]

[dependency-groups]
dev = [
    "pytest>=8.2",
    "pytest-cov>=5.0",
    "hypothesis>=6.100",
    "httpx>=0.27",
    "ruff>=0.5",
    "mypy>=1.10",
    "import-linter>=2.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/nomina"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.coverage.run]
source = ["src/nomina/dominio"]

[tool.coverage.report]
fail_under = 90

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.mypy]
python_version = "3.12"
strict = true
mypy_path = "src"

# Regla de dependencias de la arquitectura hexagonal:
# dominio no importa nada; aplicacion solo importa dominio.
[tool.importlinter]
root_package = "nomina"
include_external_packages = true

[[tool.importlinter.contracts]]
name = "Capas de la arquitectura"
type = "layers"
layers = [
    "nomina.infraestructura",
    "nomina.aplicacion",
    "nomina.dominio",
]

[[tool.importlinter.contracts]]
name = "Dominio puro (sin frameworks)"
type = "forbidden"
source_modules = ["nomina.dominio"]
forbidden_modules = [
    "fastapi",
    "sqlalchemy",
    "alembic",
    "pydantic",
    "openpyxl",
]
